--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuochoaauth – Nước hoa authentic chính hãng</title>
+    <meta name="description" content="Nước Hoa Auth chuyên cung cấp nước hoa authentic chính hãng từ các thương hiệu nổi tiếng như Chanel, Dior, Gucci. Cam kết chất lượng, giao hàng nhanh.">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,6 +32,7 @@
         <p>Nuochoaauth chuyên cung cấp nước hoa authentic và <a href="https://nuochoaauth.com/nuoc-hoa-chiet-chinh-hang-10ml/">nước hoa chiết giá tốt</a>. Chúng tôi cam kết chất lượng, uy tín và giá cả hợp lý cho mọi sản phẩm.</p>
         <p> Nước Hoa Auth là một website bán nước hoa online, cung cấp các loại nước hoa cao cấp, đa dạng về mùi hương, thương hiệu và giá cả. Bạn có thể tìm thấy nước hoa của các hãng nổi tiếng như Chanel, Dior, Gucci, Versace, Calvin Klein và nhiều hơn nữa.</p>
         <p>Với phong cách đa dạng, từ sang trọng đến năng động, từ cổ điển đến hiện đại, chúng tôi đáp ứng mọi nhu cầu và sở thích của khách hàng. Hãy đến Nuochoaauth để trải nghiệm và tìm kiếm sản phẩm phù hợp nhất cho bạn!</p>
+        <h2>Cam kết chất lượng và an toàn</h2>
         <p>Nước Hoa Auth cam kết mang đến cho khách hàng những sản phẩm chính hãng, chất lượng . Ngoài ra, Nước Hoa Auth còn có các dịch vụ hỗ trợ khách hàng như giao hàng nhanh chóng, thanh toán linh hoạt và đổi trả miễn phí trong vòng 3 ngày.</p>
         <p>Truy cập vào trang web <a href="https://nuochoaauth.com/">nuochoaauth.com</a> để xem thêm thông tin chi tiết và đặt hàng nước hoa auth ngay hôm nay. Nước Hoa Auth hy vọng sẽ mang đến cho bạn những trải nghiệm mua sắm tuyệt vời và hài lòng.</p>
     </div>
